--- a/App/templates/register.html
+++ b/App/templates/register.html
@@ -21,7 +21,7 @@
                   {% endif %}
                 {% endwith %}
 
-                <form method="POST">
+                <form method="POST" enctype="multipart/form-data">
                     <div class="mb-3">
                         <label class="form-label">Kullanıcı Adı</label>
                         <input type="text" name="username" class="form-control" required>
